# ThermoNTFA

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATION.md  LICENSE.md  NTFA_thermo_paper.ipynb  NTFA_thermo_paper.py  README.html  README.md  api.html  copyright.html  download_data.sh  examples.html  generate_inputs.ipynb  generate_inputs.py  generate_plots.ipynb  generate_plots.py  generate_plots_old.py  genindex.html  index.html  installation.html  material_parameters.ipynb  material_parameters.py  objects.inv  paper_plots.ipynb  paper_plots.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tabular_interpolation.py  test.h5  test_interpolation.py  thermoNTFA.py  thermoNTFA_example.ipynb  thermoNTFA_example.py  (+2 more)
MarkdownLinks/: changelog.html  citation.html  license.html
_sources/: README.md.txt  api.rst.txt  copyright.rst.txt  examples.rst.txt  index.rst.txt  installation.md.txt  installation.rst.txt  workflow.md.txt
data/: .gitignore  README.md
docs/: .readthedocs.yaml  README.md  conf.py  copyright.rst  examples.rst  index.rst  installation.md
examples/: NTFA_thermo_paper.html  NTFA_thermo_paper.ipynb  NTFA_thermo_paper.py  daten_kerbgrund.h5  generate_inputs.html  generate_inputs.ipynb  generate_inputs.py  generate_plots.html  generate_plots.ipynb  generate_plots.py  material_parameters.html  material_parameters.ipynb  material_parameters.py  ms9p_uniaxial_stress_data_mod.h5  paper_plots.html  paper_plots.ipynb  paper_plots.py  paper_plots_FF20240516-15h27.html  paper_plots_old.html  paper_plots_old.py  reproduce_article.html  reproduce_article.py  thermoNTFA_example.html  thermoNTFA_example.ipynb  thermoNTFA_example.py  truncate_ntfa_modes.html  truncate_ntfa_modes.ipynb  truncate_ntfa_modes.py
loadcases/: loadcase1_T0300.00_fix16_N24_100s.inp  loadcase1_T0310.10_fix16_N24_100s.inp  loadcase1_T0320.20_fix16_N24_100s.inp  loadcase1_T0330.30_fix16_N24_100s.inp  loadcase1_T0340.40_fix16_N24_100s.inp  loadcase1_T0350.51_fix16_N24_100s.inp  loadcase1_T0360.61_fix16_N24_100s.inp  loadcase1_T0370.71_fix16_N24_100s.inp  loadcase1_T0380.81_fix16_N24_100s.inp  loadcase1_T0390.91_fix16_N24_100s.inp  loadcase1_T0401.01_fix16_N24_100s.inp  loadcase1_T0411.11_fix16_N24_100s.inp  loadcase1_T0421.21_fix16_N24_100s.inp  loadcase1_T0431.31_fix16_N24_100s.inp  loadcase1_T0441.41_fix16_N24_100s.inp  loadcase1_T0451.52_fix16_N24_100s.inp  loadcase1_T0461.62_fix16_N24_100s.inp  loadcase1_T0471.72_fix16_N24_100s.inp  loadcase1_T0481.82_fix16_N24_100s.inp  loadcase1_T0491.92_fix16_N24_100s.inp  loadcase1_T0502.02_fix16_N24_100s.inp  (+579 more)
(+22 files in other folders)
